--- a/site/app/views/login/login.html.erb
+++ b/site/app/views/login/login.html.erb
@@ -1,2 +1,18 @@
-<h1>Login#login</h1>
-<p>Find me in app/views/login/login.html.erb</p>
+<html>
+  <head>
+    
+  <title>Login</title>
+
+
+  </head>
+
+   <body>
+   <form method="login" method="post">
+  Login: <input type="text" name="fname"><br>
+  Senha: <input type="text" name="lname"><br>
+  <input type="submit" value="Submit">
+  </form>
+
+    </div> <!-- /container -->
+</body>
+</html>
