--- a/site/app/views/login/index.html.erb
+++ b/site/app/views/login/index.html.erb
@@ -1,9 +1,13 @@
 <h2>Login</h2>
 
 <form method="post" action="logar">
-<label>Usuario</label><input type="text" name="login"><br>
-<label>Senha</label><input type="password" name="senha"><br><br>
-<input type="submit" value="Logar">
-<input type="button" value="Cadastrar Novo" onclick = "<%= :cadastros_new %>">
-<input type="button" value="Convidado" onclick = "<%= :principal_new %>">
+	<label>Usuario</label><input type="text" name="login"><br>
+	<label>Senha</label><input type="password" name="senha"><br><br>
+	<input type="submit" value="Logar"><br>
+</form>
+<form method="get" action='../cadastros/new'>
+	<input type="submit" value="Cadastrar Novo">
+</form>
+<form method="get" action='../principal/convidado'>
+	<input type="submit" value="Convidado">
 </form>
