--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -1,7 +1,38 @@
+<% if params[:tipo] == "convidado" %>
+<div id = "top" style=" width:100%; height:100px">
+<div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
+	Bem vindo, Convidado !<br>
+	<form method='get' action='../login'>
+		<input type="submit" value = "Logout">
+	</form>
+</div>
+</div>
+<div = "lateral" style = "width:15%; height:20%; float:left">
+	<ul>
+		<li>Home</li>
+		<li><a href = "">Tabela Periódica</a></li>
+		<li>Sites das Turmas</li>
+		<li><a href = "">Contato Professor</a></li>
+		<li>Notas e Frequências</li>
+		<li>Calendário</li>
+	</ul>
+</div>
+<div = "central" style = "text-align:center; width:85%; float:left">
+<center><h2>Home</h2></center><br><br>
+Site online sobre Química para os alunos terem acesso a um novo meio mais interativo de estudo, <br>
+contando com os materiais que serão usados em aula (tabela periódica, listas, provas passadas, etc)<br>
+ além de uma área específica para o aluno onde poderá tirar suas dúvidas por meio de perguntas, <br>
+ sem precisar do uso do e-mail, bem como saber sua frequência e notas.
+
+<blockquote><i>InfoQuímica</i></blockquote>
+</div>
+<% else %>
 <div id = "top" style=" width:100%; height:100px">
 <div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
 	Bem vindo, <%= @usuario %> !<br>
-	<input type="button" value = "Logout" action="">
+	<form method='get' action='../login/index'>
+		<input type="submit" value = "Logout">
+	</form>
 </div>
 </div>
 <div = "lateral" style = "width:15%; height:20%; float:left">
@@ -23,3 +54,4 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 
 <blockquote><i>InfoQuímica</i></blockquote>
 </div>
+<% end %>
