--- a/site/app/views/login/index.html.erb
+++ b/site/app/views/login/index.html.erb
@@ -1,13 +1,11 @@
-<h2>Login</h2>
+	<%= form_tag({action: 'login'}, class:'form-signin', method: 'post' ) do %>
+      <form class="form-signin" role="form">
+        <h2 class="form-signin-heading">Login</h2>
+        <input type="text" name="username" class="form-control" placeholder="Nome de Usuario" required autofocus>
+        <input type="password" name="password" class="form-control" placeholder="Senha" required>
+    
+             </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        <% end %>
+   
 
-<form method="post" action="logar">
-	<label>Usuario</label><input type="text" name="login"><br>
-	<label>Senha</label><input type="password" name="senha"><br><br>
-	<input type="submit" value="Logar"><br>
-</form>
-<form method="get" action='../cadastros/new'>
-	<input type="submit" value="Cadastrar Novo">
-</form>
-<form method="get" action='../principal/convidado'>
-	<input type="submit" value="Convidado">
-</form>
