Alterado a referencia de páginas e nome do botão quando usuario ou convidado Fixes #45

--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -2,7 +2,7 @@
 <div id = "top" style=" width:100%; height:100px">
 <div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
 	Bem vindo, <%= @usuario %> !<br>
-	<form method='get' action='../login/index'>
+	<form method='get' action='../principal/index'>
 		<input type="submit" value = "Logout">
 	</form>
 </div>
@@ -32,7 +32,7 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 <div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
 	Bem vindo, Convidado !<br>
 	<form method='get' action='../login'>
-		<input type="submit" value = "Logout">
+		<input type="submit" value = "Logar">
 	</form>
 </div>
 </div>
