--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -1,8 +1,8 @@
-<% if session[:user] != nil %>
+<% if session[:usuario] != nil %>
 <div id = "top" style=" width:100%; height:100px">
 <div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
 	Bem vindo, <%= @usuario %> !<br>
-	<form method='get' action='../principal/index'>
+	<form method='get' action='../principal/logout'>
 		<input type="submit" value = "Logout">
 	</form>
 </div>
