--- a/site/app/views/login/index.html.erb
+++ b/site/app/views/login/index.html.erb
@@ -6,6 +6,8 @@
     
              </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        <a href="../usuarios/new"><button class="btn btn-lg btn-primary btn-block">Cadastro</button></a>
         <% end %>
+
    
 
