--- a/site/app/views/contacts/new.html.erb
+++ b/site/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New contact</h1>
+<h1>Entrar em contato</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'Back', principal_path %>
