--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -12,7 +12,7 @@
 		<li>Home</li>
 		<li><a href = "">Tabela Periódica</a></li>
 		<li><a href = "">Sites das Turmas</a></li>
-		<li><a href = "">Contato Professor</a></li>
+		<li><a href = "../contacts/new">Contato Professor</a></li>
 		<li><a href = "">Notas e Frequências</a></li>
 		<li><a href = "">Calendário</a></li>
 	</ul>
@@ -41,7 +41,7 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 		<li>Home</li>
 		<li><a href = "">Tabela Periódica</a></li>
 		<li>Sites das Turmas</li>
-		<li><a href = "">Contato Professor</a></li>
+		<li><a href = "../contacts/new">Contato Professor</a></li>
 		<li>Notas e Frequências</li>
 		<li>Calendário</li>
 	</ul>
