--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -10,7 +10,7 @@
 <div = "lateral" style = "width:15%; height:20%; float:left">
 	<ul>
 		<li>Home</li>
-		<li><a href = "">Tabela Periódica</a></li>
+		<li><a href = "../tabela">Tabela Periódica</a></li>
 		<li><a href = "">Sites das Turmas</a></li>
 		<li><a href = "../contacts/new">Contato Professor</a></li>
 		<li><a href = "">Notas e Frequências</a></li>
@@ -39,7 +39,7 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 <div = "lateral" style = "width:15%; height:20%; float:left">
 	<ul>
 		<li>Home</li>
-		<li><a href = "">Tabela Periódica</a></li>
+		<li><a href = "../tabela">Tabela Periódica</a></li>
 		<li>Sites das Turmas</li>
 		<li><a href = "../contacts/new">Contato Professor</a></li>
 		<li>Notas e Frequências</li>
