--- a/site/app/views/usuarios/_form.html.erb
+++ b/site/app/views/usuarios/_form.html.erb
@@ -23,7 +23,12 @@
     <%= f.label :password %><br>
     <%= f.text_field :password %>
   </div>
+    <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
   <div class="actions">
-    <%= f.submit %>
+
+    <%= f.submit "Criar usuario" %>
   </div>
 <% end %>
