--- a/site/app/views/contacts/_form.html.erb
+++ b/site/app/views/contacts/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.text_area :message %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Mandar mensagem"%>
   </div>
 <% end %>
