Pagina calendario totalmente funcional e linkada com a principal Fixes #69

--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -27,7 +27,7 @@
 		<li class="list-group-item"><a href = "">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
 		<li class="list-group-item"><a href = "">Notas e Frequências</a></li>
-		<li class="list-group-item"><a href = "">Calendário</a></li>
+		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
 	</ul>
 </div>
 <div = "central" style = "text-align:center; width:85%; float:left">
@@ -64,7 +64,7 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 		<li class="list-group-item"><a href = "">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
 		<li class="list-group-item"><a href = "">Notas e Frequências</a></li>
-		<li class="list-group-item"><a href = "">Calendário</a></li>
+		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
 	</ul>
 </div>
 <div = "central" style = "text-align:center; width:85%; float:left">
