--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -24,7 +24,7 @@
 		
 		<li class="list-group-item active">Home</li>
 		<li class="list-group-item"><a href = "../tabela">Tabela Periódica</a></li>
-		<li class="list-group-item"><a href = "">Sites das Turmas</a></li>
+		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
 		<li class="list-group-item"><a href = "">Notas e Frequências</a></li>
 		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
@@ -61,10 +61,10 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 		
 		<li class="list-group-item active">Home</li>
 		<li class="list-group-item"><a href = "../tabela">Tabela Periódica</a></li>
-		<li class="list-group-item"><a href = "">Sites das Turmas</a></li>
+		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
-		<li class="list-group-item"><a href = "">Notas e Frequências</a></li>
-		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
+		<li class="list-group-item">Notas e Frequências</li>
+		<li class="list-group-item">Calendário</li>
 	</ul>
 </div>
 <div = "central" style = "text-align:center; width:85%; float:left">
