--- a/site/app/views/usuarios/new.html.erb
+++ b/site/app/views/usuarios/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New usuario</h1>
+<div class="page-header">
+  <h1>Site de quimica <small>Criar usuario</small></h1>
+</div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', principal_path %>
+<%= link_to 'Voltar', principal_path %>
