--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -64,13 +64,13 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
 		<li class="list-group-item">Notas e Frequências</li>
-		<li class="list-group-item">Calendário</li>
+		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
 	</ul>
 </div>
 <div = "central" style = "text-align:center; width:85%; float:left">
 
 <div class="page-header">
-  <h1>Homepage <small> Professora: Daniela Vanzin</small></h1>
+  <h1>Homepage <small> Professora: Daniele Vanzin</small></h1>
 </div>
 	<div class="jumbotron">
   <h1>InfoQuímica</h1>
