--- a/site/app/views/calendario/index.html.erb
+++ b/site/app/views/calendario/index.html.erb
@@ -5,12 +5,12 @@
 <div class="jumbotron">
   <h1>Calendario letivo: 2014</h1>
   <form action="https://drive.google.com/file/d/0B7vjaRnCSAH7T2w5ZnRUVGRMdG8/view?usp=sharing">
-    <button type="button" class="btn btn-info btn-lg">
-  <span  aria-hidden="true"></span> Ver/Baixar PDF
+    <input type="submit" class="btn btn-info btn-lg">
+  <span  aria-hidden="true">Ver/Baixar PDF</span> 
 </button>
 </form>
 
-<%= link_to 'Back', principal_path %>
+<%= link_to 'Voltar', principal_path %>
 
 
 </div>
