--- a/site/app/views/posts/index.html.erb
+++ b/site/app/views/posts/index.html.erb
@@ -13,18 +13,19 @@
           <tr>
             <th>Conteúdo:</th>
             <th>Em:</th>
-            <th>Edit:</th>
+            <th>Editar:</th>
+            <th>Excluir:</th>
           </tr>
         </thead>
         <tbody>
          <% @posts.each do |post| %>
       <tr>
         <td><%= post.conteudo %></td>
-        <td><%= post.data %></td>
-
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-
+        <td><%= post.data.to_s.truncate(16, omission: '') %></td> 
+        <% if @id.to_s == post.id_usuario %>
+        <td><%= link_to 'Editar', edit_post_path(post) %></td>
+        <td><%= link_to 'Excluir', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
         </tbody>
