--- a/site/app/views/posts/index.html.erb
+++ b/site/app/views/posts/index.html.erb
@@ -2,11 +2,11 @@
   <h1>Posts <small>recentes:</small></h1>
 </div>
 
-
+<div class="panel panel-default">
 
  <div class="container">
       
-      <p>Posts:</p>                                                                                      
+      <p><br><b>Posts:</b></p>                                                                                      
       <div class="table-responsive">          
       <table class="table">
         <thead>
@@ -31,6 +31,7 @@
         </tbody>
       </table>
       </div>
+    </div>
     </div>
 
 <form action="../posts/new">
