--- a/site/app/views/calendario/index.html.erb
+++ b/site/app/views/calendario/index.html.erb
@@ -5,13 +5,10 @@
 <div class="jumbotron">
   <h1>Calendario letivo: 2014</h1>
   <form action="https://drive.google.com/file/d/0B7vjaRnCSAH7T2w5ZnRUVGRMdG8/view?usp=sharing">
-<<<<<<< HEAD
-    <input type="submit" class="btn btn-info btn-lg">
-  <span  aria-hidden="true">Ver/Baixar PDF</span> 
-</button>
-</form>
 
-=======
+
+
+<form>
     <button type="submit" class="btn btn-info btn-lg">
   <span  aria-hidden="true"></span> Ver/Baixar PDF
 </button>
@@ -19,7 +16,7 @@
 
 <br>
 
->>>>>>> 611c4064bb6db31f7ccba646a28eed3e3207b060
+
 <%= link_to 'Voltar', principal_path %>
 
 
