--- a/site/app/views/posts/show.html.erb
+++ b/site/app/views/posts/show.html.erb
@@ -1,19 +1,30 @@
 <p id="notice"><%= notice %></p>
-
+<div class="panel panel-info">
+	 <div class="panel-heading">Post de: <b><%= @usuario.username %></b></div>
 <p>
+	<br>
   <strong>Conteudo:</strong>
   <%= @post.conteudo %>
 </p>
+<br><br>
 
 <p>
   <strong>Data:</strong>
   <%= @post.data %>
 </p>
+<br>
+</div>
 
-<p>
-  <strong>Usuario:</strong>
-  <%= @post.usuario %>
-</p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+
+<div class="form-group">
+  <label for="comment">Comente algo:</label>
+  <textarea class="form-control" rows="5" id="comment"></textarea>
+</div>
+
+
+
+<br>
+
+
+<%= link_to 'Voltar', posts_path %>
