Model, Controller, view do comentario Fixes #81

--- a/site/app/views/posts/show.html.erb
+++ b/site/app/views/posts/show.html.erb
@@ -16,11 +16,15 @@
 </div>
 
 
-
+<form>
 <div class="form-group">
   <label for="comment">Comente algo:</label>
   <textarea class="form-control" rows="5" id="comment"></textarea>
 </div>
+<input type="submit" value="Submit">
+</form>
+
+
 
 
 
