--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -52,7 +52,8 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 <div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
 	Bem vindo, Convidado !<br>
 	<form method='get' action='../login'>
-<button type="submit" class="btn btn-success">Login</button>
+		<br>
+<button type="submit" class="btn btn-success">Logar/Cadastrar</button>
 	</form>
 </div>
 </div>
