Comentario agora tem uma timestamp

--- a/site/app/views/comentarios/show.html.erb
+++ b/site/app/views/comentarios/show.html.erb
@@ -15,5 +15,10 @@
   <%= @comentario.id_usuario %>
 </p>
 
+<p>
+  <strong>Data:</strong>
+  <%= @comentario.data %>
+</p>
+
 <%= link_to 'Edit', edit_comentario_path(@comentario) %> |
 <%= link_to 'Back', comentarios_path %>
