--- a/site/app/views/comentarios/_form.html.erb
+++ b/site/app/views/comentarios/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :id_usuario %><br>
     <%= f.number_field :id_usuario %>
   </div>
+  <div class="field">
+    <%= f.label :data %><br>
+    <%= f.text_field :data %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
