--- a/site/app/views/comentarios/index.html.erb
+++ b/site/app/views/comentarios/index.html.erb
@@ -6,6 +6,7 @@
       <th>Id post</th>
       <th>Conteudo</th>
       <th>Id usuario</th>
+      <th>Data</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
         <td><%= comentario.id_post %></td>
         <td><%= comentario.conteudo %></td>
         <td><%= comentario.id_usuario %></td>
+        <td><%= comentario.data %></td>
         <td><%= link_to 'Show', comentario %></td>
         <td><%= link_to 'Edit', edit_comentario_path(comentario) %></td>
         <td><%= link_to 'Destroy', comentario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
