--- a/site/app/views/comentarios/_form.html.erb
+++ b/site/app/views/comentarios/_form.html.erb
@@ -11,22 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :id_post %><br>
-    <%= f.number_field :id_post %>
-  </div>
+
   <div class="field">
     <%= f.label :conteudo %><br>
-    <%= f.text_field :conteudo %>
+    <%= f.text_area :conteudo %>
   </div>
-  <div class="field">
-    <%= f.label :id_usuario %><br>
-    <%= f.number_field :id_usuario %>
-  </div>
-  <div class="field">
-    <%= f.label :data %><br>
-    <%= f.text_field :data %>
-  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
