--- a/site/app/views/comentarios/index.html.erb
+++ b/site/app/views/comentarios/index.html.erb
@@ -1,13 +1,18 @@
 <h1>Listing comentarios</h1>
 
-<table>
+<div class="panel panel-default">
+
+ <div class="container">
+      
+      <p><br><b>Comentarios:</b></p>                                                                                      
+      <div class="table-responsive">          
+      <table class="table">
   <thead>
     <tr>
       <th>Id post</th>
       <th>Conteudo</th>
       <th>Id usuario</th>
       <th>Data</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -25,6 +30,9 @@
     <% end %>
   </tbody>
 </table>
+ </div>
+    </div>
+    </div>
 
 <br>
 
