--- a/site/app/views/posts/show.html.erb
+++ b/site/app/views/posts/show.html.erb
@@ -15,13 +15,51 @@
 <br>
 </div>
 
+<div class="table-responsive">          
+      <table class="table">
+  <thead>
+    <tr>
+      <th>Conteudo</th>
+      <th>Id usuario</th>
+      <th>Data</th>
+    </tr>
+  </thead>
 
-<form>
-<div class="form-group">
-  <label for="comment">Comente algo:</label>
-  <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
-<input type="submit" value="Submit">
+  <tbody>
+
+  	<% if !@comentarios.empty? %>
+    <% @comentarios.each do |comentario| %>
+      <tr>
+        <td><%= comentario.conteudo %></td>
+        <td><%= comentario.id_usuario %></td>
+        <td><%= comentario.data %></td>
+        <td><%= link_to 'Show', comentario %></td>
+        <td><%= link_to 'Edit', edit_comentario_path(comentario) %></td>
+        <td><%= link_to 'Destroy', comentario, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+       <% end %>
+    <% end %>
+  </tbody>
+</table>
+
+
+
+<form accept-charset="UTF-8" action="/comentarios" class="new_comentario"  id="new_comentario" method="post"><div style="display:none"><input name="utf8" type="hidden" value="&#x2713;" /><input name="authenticity_token" type="hidden" value="JfmXu3dd6D+4zUMzm/kzXdZERBD81RDHS9o/QuinRwc=" /></div>
+
+
+  <div class="field">
+    <label for="comentario_conteudo">Conteudo</label><br>
+    <textarea id="comentario_conteudo" name="comentario[conteudo]">
+</textarea>
+  </div>
+
+<input type='hidden' name='comentario[id_post]' value'<%=@post.id%>'>
+  <div class="actions">
+    <input name="commit" type="submit" value="Create Comentario" />
+  </div>
+</form>
+
+
 </form>
 
 
