Correção post's e login de admin Fixes #86

--- a/site/app/views/login/index.html.erb
+++ b/site/app/views/login/index.html.erb
@@ -10,7 +10,7 @@
 
         <button class="btn btn-lg btn-success btn-block" type="submit" style= >Logar</button>
         <br>
-
+        </form>
 		<a href="../usuarios/new"><button class="btn btn-lg btn-info btn-block" >Cadastrar</button></a>
 
    <% end %>
