--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -1,4 +1,4 @@
-<% if session[:usuario] != nil %>
+<% if session[:usuario] != nil or session[:admin] != nil %>
 
 <div id = "top" style=" width:100%; height:100px">
 <div = "logout" style = "position:fixed; left:85%; top:10px; text-align:center">
