--- a/site/app/views/posts/index.html.erb
+++ b/site/app/views/posts/index.html.erb
@@ -20,7 +20,8 @@
         <tbody>
          <% @posts.each do |post| %>
       <tr>
-        <td><%= post.conteudo.truncate(40) %></td>
+        
+        <td><%= link_to post.conteudo.truncate(40), post_path(post) %></td>
         <td><%= post.data.to_s.truncate(16, omission: '') %></td> 
         <% if @id.to_s == post.id_usuario %>
         <td><%= link_to 'Editar', edit_post_path(post) %></td>
