--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -24,6 +24,7 @@
 		
 		<li class="list-group-item active">Home</li>
 		<li class="list-group-item"><a href = "../tabela">Tabela Periódica</a></li>
+		<li class="list-group-item"><a href = "../posts">Forum</a></li>
 		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
 		<li class="list-group-item"><a href = "">Notas e Frequências</a></li>
@@ -62,6 +63,7 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 		
 		<li class="list-group-item active">Home</li>
 		<li class="list-group-item"><a href = "../tabela">Tabela Periódica</a></li>
+		<li class="list-group-item"><a href = "../posts">Forum</a></li>
 		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
 		<li class="list-group-item">Notas e Frequências</li>
