Notas totalmente funcional That's all folks Fixes #102

--- a/site/app/views/notas/index.html.erb
+++ b/site/app/views/notas/index.html.erb
@@ -7,4 +7,4 @@
   <p><a class="btn btn-danger btn-lg" href="../principal" role="button">Leve-me de volta!</a></p>
 </div>
 
-<iframe src="https://docs.google.com/spreadsheets/d/1xQoWhMYvvBd2qYYlL33fGOwBnqZbUQyCCg2Jo7FzKXw/pubhtml?widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1xQoWhMYvvBd2qYYlL33fGOwBnqZbUQyCCg2Jo7FzKXw/pubhtml?widget=true&amp;headers=false" height="300" width="1140"></iframe>
