--- a/site/app/views/principal/index.html.erb
+++ b/site/app/views/principal/index.html.erb
@@ -27,7 +27,7 @@
 		<li class="list-group-item"><a href = "../posts">Forum</a></li>
 		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
-		<li class="list-group-item"><a href = "">Notas e Frequências</a></li>
+		<li class="list-group-item"><a href = "../notas">Notas e Frequências</li>
 		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
 	</ul>
 </div>
@@ -66,7 +66,7 @@ contando com os materiais que serão usados em aula (tabela periódica, listas, 
 		<li class="list-group-item"><a href = "../posts">Forum</a></li>
 		<li class="list-group-item"><a href = "../turmas">Sites das Turmas</a></li>
 		<li class="list-group-item"><a href = "../contacts/new">Contato Professor</a></li>
-		<li class="list-group-item">Notas e Frequências</li>
+		<li class="list-group-item"><a href = "../notas">Notas e Frequências</li>
 		<li class="list-group-item"><a href = "../calendario/index">Calendário</a></li>
 	</ul>
 </div>
